--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@
     --code-font: "Söhne Mono", Monaco, "Andale Mono", "Ubuntu Mono", monospace;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: var(--white-color);
 }
@@ -44,7 +48,10 @@ a {
 .main-header {
     width: 100%;
     border-bottom: solid 1px var(--light-gray-color);
-
+    position: sticky;
+    top: 0;
+    background-color: var(--white-color);
+    z-index: 3;
     .content-header {
         min-height: 5rem;
         max-width: var(--max-width);
@@ -160,7 +167,11 @@ a {
     width: 100%;
     height: min-content;
     position: sticky;
-    top: 1rem;
+    top: 6rem;
+    background-color: var(--white-color);
+    .close {
+        display: none;
+    }
 
     header {
         display: flex;
@@ -194,7 +205,7 @@ a {
                     }
                 }
 
-                .active {
+                button.active {
                     color: var(--blue-color);
                     border-left: .25rem solid var(--blue-color);
                     font-weight: bold;
@@ -321,7 +332,6 @@ a {
                 }
             }
         }
-
     }
     > .active {
         display: block;
@@ -331,7 +341,11 @@ a {
 .headings {
     height: min-content;
     position: sticky;
-    top: 1rem;
+    top: 6rem;
+    background-color: var(--white-color);
+    .close {
+        display: none;
+    }
 
     > section {
         display: none;
@@ -380,6 +394,52 @@ a {
     }
 }
 
+.footer-menu-mobile {
+    width: 100%;
+    border-top: solid 1px var(--light-gray-color);
+
+    display: none;
+    position: fixed;
+    bottom: 0;
+
+    background-color: var(--white-color);
+    z-index: 2;
+    .content-footer {
+        min-height: 5rem;
+        max-width: var(--max-width);
+        margin: auto;
+        padding: 0 1rem;
+
+        display: flex;
+        justify-content: space-between;
+        align-items: end;
+
+        li {
+            button {
+                padding: 1rem 1rem .25rem 1rem;
+
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                cursor: pointer;
+                &:hover {
+                    color: var(--blue-color);
+                }
+                img {
+                    width: 35px;
+                    height: 35px;
+                }
+                span {
+                    font: bold 1rem var(--primary-font);
+                }
+            }
+        }
+    }
+}
+
+    
+
 footer {
     width: 100%;
     min-height: 50vh;
@@ -388,6 +448,13 @@ footer {
 }
 
 @media (max-width: 65rem) {
+    .main-header {
+        .content-header {
+            .logo {
+              display: none;
+            }
+        }
+    }
     .body {
         padding: 0;
 
@@ -395,11 +462,30 @@ footer {
         flex-direction: column;
         align-items: center;
     }
-    .trees {
-        position: static;
-    }
+    .trees,
     .headings {
+        overflow: scroll;
+        width: 100%;
+        height: 100%;
+        padding: 3rem;
         display: none;
+        position: fixed;
+        top: 0;
+        z-index: 3;
+
+        .close {
+          width: 50px;
+          position: absolute;
+          top: 0;
+          right: 0;
+          display: block;
+              img {
+                width: 100%;
+              }
+        }
+    }
+    .footer-menu-mobile {
+        display: block;
     }
 }
 
