--- a/styles.css
+++ b/styles.css
@@ -464,7 +464,7 @@ footer {
                         position: absolute;
                         left: 0;
                         button {
-                            min-height: 50px;
+                            font-size: 1.5rem;
                         }
                     }
                 }
