--- a/styles.css
+++ b/styles.css
@@ -146,15 +146,10 @@ a {
 
 .progress-bar {
     width: 100%;
-    
-    position: sticky;
-    top: 0;
-
-    z-index: 2;
+    z-index: 3;
     .progress {
         width: 0%;
         height: .5rem;
-
         background-color: var(--blue-color);
     }
 }
@@ -185,17 +180,15 @@ a {
     }
     > section {
         display: none;
-
-        ul {
-            margin-left: 1rem;
-
+        > ul {
+            ul {
+                margin-left: 1rem;
+            }
             li {
-
                 button, a {
                     width: 100%;
                     padding: .5rem 1rem;
                     display: block;
-                    border-bottom: solid 1px var(--gray-color);
                     color: var(--black-color);
                     cursor: pointer;
                     font: normal 1rem var(--primary-font);
@@ -351,18 +344,16 @@ a {
 
     > section {
         display: none;
-
         position: sticky;
         top: 0;
 
         > span {
-            margin: 0 0 2rem 0;
             color: var(--black-color);
             font: bold 1rem var(--primary-font);
         }
 
         ul {
-            margin-left: 1rem;
+            width: 100%;
             border-left: solid 1px var(--gray-color);
             li {
                 button {
@@ -392,7 +383,9 @@ a {
         }
     }
     > .active {
-        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
 
@@ -464,7 +457,7 @@ footer {
                         position: absolute;
                         left: 0;
                         button {
-                            font-size: 1.5rem;
+                            font-size: 1rem;
                         }
                     }
                 }
@@ -483,7 +476,8 @@ footer {
         overflow: scroll;
         width: 100%;
         height: 100%;
-        padding: 3rem;
+        padding: 1rem;
+        padding-top: 3rem;
         display: none;
         position: fixed;
         top: 0;
